# lspml

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  test.spml
.github/workflows/: rust.yml
capabilities/: Cargo.toml
capabilities/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
diagnostic/: Cargo.toml
diagnostic/src/: lib.rs
doc/sp_argument/: condition_attribute.md  default_attribute.md  expression_attribute.md  locale_attribute.md  name_attribute.md  object_attribute.md  tag.md  value_attribute.md
doc/sp_attribute/: dynamics_attribute.md  name_attribute.md  text_attribute.md
doc/sp_barcode/: height_attribute.md  name_attribute.md  scope_attribute.md  text_attribute.md  type_attribute.md
doc/sp_break/: tag.md
doc/sp_calendarsheet/: action_attribute.md  date_attribute.md  from_attribute.md  mode_attribute.md  name_attribute.md  object_attribute.md  to_attribute.md  value_attribute.md
doc/sp_checkbox/: checked_attribute.md  value_attribute.md
doc/sp_code/: tag.md
doc/sp_collection/: action_attribute.md  condition_attribute.md  default_attribute.md  expression_attribute.md  index_attribute.md  name_attribute.md  object_attribute.md  publisher_attribute.md  query_attribute.md  scope_attribute.md  tag.md  value_attribute.md
doc/sp_condition/: tag.md
doc/sp_diff/: from_attribute.md  locale_attribute.md  lookup_attribute.md  name_attribute.md  to_attribute.md
doc/sp_else/: tag.md
doc/sp_elseif/: eq_attribute.md  gt_attribute.md  ic_attribute.md  isNull_attribute.md  lt_attribute.md  match_attribute.md  neq_attribute.md
doc/sp_error/: code_attribute.md  tag.md
doc/sp_expire/: date_attribute.md
doc/sp_filter/: collection_attribute.md  filter_attribute.md  format_attribute.md  from_attribute.md  ic_attribute.md  invert_attribute.md  mode_attribute.md  name_attribute.md  scope_attribute.md  to_attribute.md  type_attribute.md
doc/sp_for/: condition_attribute.md  from_attribute.md  index_attribute.md  locale_attribute.md  step_attribute.md  to_attribute.md
doc/sp_form/: command_attribute.md  context_attribute.md  enctype_attribute.md  handler_attribute.md  id_attribute.md  method_attribute.md  module_attribute.md  name_attribute.md  nameencoding_attribute.md  template_attribute.md  uri_attribute.md
doc/sp_hidden/: fixvalue_attribute.md  value_attribute.md
doc/sp_if/: condition_attribute.md  eq_attribute.md  gt_attribute.md  gte_attribute.md  ic_attribute.md  lt_attribute.md  lte_attribute.md  match_attribute.md  name_attribute.md  neq_attribute.md
doc/sp_include/: anchor_attribute.md  arguments_attribute.md  context_attribute.md  mode_attribute.md  module_attribute.md  return_attribute.md  template_attribute.md  uri_attribute.md
doc/sp_io/: contenttype_attribute.md  tag.md  type_attribute.md
doc/sp_iterator/: collection_attribute.md  item_attribute.md  max_attribute.md  min_attribute.md
doc/sp_json/: indent_attribute.md  object_attribute.md  overwrite_attribute.md
doc/sp_linkedInformation/: tag.md
doc/sp_linktree/: attributes_attribute.md  localelink_attribute.md  name_attribute.md  parentlink_attribute.md  rootelement_attribute.md  sortkeys_attribute.md  sortsequences_attribute.md  sorttypes_attribute.md
doc/sp_livetree/: action_attribute.md  leaflink_attribute.md  name_attribute.md  node_attribute.md  parentlink_attribute.md  publisher_attribute.md  rootElement_attribute.md  sortkeys_attribute.md  sortsequences_attribute.md
doc/sp_log/: level_attribute.md
doc/sp_login/: captcharequired_attribute.md  client_attribute.md  login_attribute.md  (+3 more)
document_store/: Cargo.toml
document_store/src/: lib.rs
grammar/: Cargo.toml
modules/: Cargo.toml
parser/: Cargo.toml
parser/src/: lib.rs
spel/: Cargo.toml
src/: analyze.rs  capabilities.rs  document.rs  document_store.rs  grammar.rs  lsp.rs  main.rs  modules.rs  old_main.rs  parser.rs  project.rs  symbols.rs  treesitter.rs
tree-sitter-spel/: .gitignore  Cargo.toml  grammar.js  package.json  test.spel
tree-sitter-spel/bindings/node/: binding.cc  index.js
tree-sitter-spel/bindings/rust/: lib.rs
tree-sitter-spel/src/: grammar.json  node-types.json  parser.c
(+289 files in other folders)
