[package]
name = "lspml"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/DrWursterich/lspml"
license = "MIT"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = "1.0.194"
serde_json = "1.0.111"
structured-logger = "1.0.3"
tree-sitter = "0.22.2"
tree-sitter-spml = { git = "https://github.com/DrWursterich/tree-sitter-spml.git" }
# tree-sitter-spml = { path = "/home/schaeper/git/tree-sitter-spml/" }
derive = { path = "./derive" }

