[package]
name = "document_store"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/DrWursterich/lspml/document_store"
license = "MIT"

[dependencies]
anyhow = "1.0.79"
log = "0.4.20"
lsp-types = "0.97.0"
parser = { path = "../parser" }
tree-sitter = "0.23.0"
tree-sitter-spml = { git = "https://github.com/DrWursterich/tree-sitter-spml.git" }
