[package]
name = "tree-sitter-spel"
description = "spel grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "spel"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/DrWursterich/lspml/tree-sitter-spel"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
	"bindings/rust/*",
	"grammar.js",
	"src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
